--- a/html/checkout.html
+++ b/html/checkout.html
@@ -21,6 +21,8 @@
     <div class="loader-container" id="loader">
         <div class="loader" > Loading...</div>
     </div>
+    <div class="toast-container"></div>
+
     <nav class="navbar navbar-light shadow-sm mb-4">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
@@ -30,7 +32,8 @@
                 <i class="fas fa-user-circle fa-lg dropdown-toggle" id="navbarDropdown" role="button"
                     data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                    <label class="w-100 py-1 px-4 text-nowrap d-none" id="user-name"></label>
+                    <a class="dropdown-item font-weight-bold" href="#" onclick="logout()">Logout</a>
                 </div>
             </div>
         </div>
@@ -41,11 +44,11 @@
             <div class="col-12 col-lg-7">
                 <h4 class="font-weight-bold m-2">Orders</h4>
                 <div class="border rounded shadow-sm" id="product-list">
-                    <div class="row m-0 p-2 border-bottom product">
+                    <div class="row m-0 p-2 border-bottom product d-none">
                         <img class="img-fluid rounded img-thumbnail border-0 checkout-image"
                             src=""
                             alt="Image not Available">
-                        <div class="col py-2 d-flex justify-content-between mr-auto flex-wrap">
+                        <div class="col py-2 d-flex justify-content-between mr-auto flex-wrap position-relative">
                             <div>
                                 <h5 class="font-weight-bold product-brand"></h5>
                                 <div class="text-secondary product-name"></div>
@@ -64,12 +67,13 @@
                                     <span class="product-quantity"></span>
                                 </div>
                             </div>
+                            <i class="fas fa-trash-alt text-secondary cursor-pointer"></i>
                         </div>
                     </div>
                 </div>
                 <h5 class="m-2 d-none" id="no-product">Add more products to place an order</h5>
             </div>
-            <div class="col-12 col-lg-5">
+            <div class="col-12 col-lg-5" id="payment-section">
                 <h4 class="font-weight-bold m-2">Payments</h4>
                 <div class="border shadow-sm rounded p-2">
                     <h6 class="font-weight-bold mt-2">Total Items (<span id="total-items">0</span>)</h6>
