--- a/html/detail.html
+++ b/html/detail.html
@@ -40,13 +40,14 @@
                 <i class="fas fa-user-circle text-dark fa-lg dropdown-toggle" id="navbarDropdown" role="button"
                     data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                    <label class="w-100 py-1 px-4 text-nowrap d-none" id="user-name"></label>
+                    <a class="dropdown-item font-weight-bold" href="#" onclick="logout()">Logout</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container d-none">
         <div class="row">
             <div class="col-12 col-lg-6">
                 <div id="caraouselControl" class="carousel slide" data-ride="carousel" data-interval="2000">
