--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 <i class="fas fa-user-circle text-dark fa-lg dropdown-toggle" id="navbarDropdown" role="button"
                     data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                    <label class="w-100 py-1 px-4 text-nowrap d-none" id="user-name"></label>
+                    <a class="dropdown-item font-weight-bold" href="#" onclick="logout()">Logout</a>
                 </div>
             </div>
         </div>
@@ -48,11 +49,11 @@
 
     <div class="container">
         <div class="row align-items-start justify-content-around" id="list-container">
-            <div class="d-flex flex-column justify-content-between mx-3 my-2 product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
+            <div class="d-flex flex-column justify-content-between my-2 mx-3 product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
                 <div class="mx-auto">
                     <img class="img-fluid rounded img-thumbnail border-0 pt-2" src=""alt="Image not Available">
                 </div>
-                <div class="product-detail my-1 px-2 position-relative">
+                <div class="product-detail my-1 px-1 position-relative">
                     <div class="cart-section p-2" id="cart-section">
                         <input class="small py-1 px-2" value="1" min="1" type="number" id="input">
                         <button class="btn btn-outline-primary btn-sm" id="btn">+ Add</button>
