--- a/html/checkout.html
+++ b/html/checkout.html
@@ -25,9 +25,14 @@
 
     <nav class="navbar navbar-light shadow-sm mb-4">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand mr-auto" href="/">
                 <img src="/assets/brand-logo.png" />
             </a>
+            <div class="nav-item px-2">
+                <a class="nav-link text-dark position-relative" href="/html/upload.html">
+                    <i class="fas fa-file-upload fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Upload"></i>
+                </a>
+            </div>
             <div class="nav-item dropdown px-2">
                 <i class="fas fa-user-circle fa-lg dropdown-toggle" id="navbarDropdown" role="button"
                     data-toggle="dropdown" data-tooltip="tooltip" data-placement="bottom" title="User Info"></i>
