--- a/html/detail.html
+++ b/html/detail.html
@@ -29,7 +29,12 @@
             <a class="navbar-brand mr-auto" href="/">
                 <img src="/assets/brand-logo.png" />
             </a>
-            <div class="nav-item px-2">
+            <div class="nav-item">
+                <a class="nav-link text-dark position-relative" href="/html/upload.html">
+                    <i class="fas fa-file-upload fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Upload"></i>
+                </a>
+            </div>
+            <div class="nav-item pr-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
                     <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom"
                         title="Checkout"></i>
