--- a/html/upload.html
+++ b/html/upload.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Collection</title>
+    <title>upload</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,7 +21,6 @@
     <div class="loader-container" id="loader">
         <div class="loader"> Loading...</div>
     </div>
-
     <div class="toast-container"></div>
 
     <nav class="navbar navbar-light shadow-sm">
@@ -29,12 +28,7 @@
             <a class="navbar-brand mr-auto" href="/">
                 <img src="/assets/brand-logo.png" />
             </a>
-            <div class="nav-item">
-                <a class="nav-link text-dark position-relative" href="/html/upload.html">
-                    <i class="fas fa-file-upload fa-lg" data-tooltip="tooltip" data-placement="bottom" title="Upload"></i>
-                </a>
-            </div>
-            <div class="nav-item pr-2">
+            <div class="nav-item px-2">
                 <a class="nav-link text-dark position-relative" href="/html/checkout.html">
                     <i class="fas fa-shopping-cart fa-lg" data-tooltip="tooltip" data-placement="bottom"
                         title="Checkout"></i>
@@ -53,30 +47,23 @@
     </nav>
 
     <div class="container">
-        <div class="row align-items-start justify-content-around" id="list-container">
-            <div class="d-flex flex-column justify-content-between my-2 mx-3 product-container border rounded shadow-sm cursor-pointer col-12 col-md-5 col-xl-3">
-                <div class="mx-auto">
-                    <img class="img-fluid rounded img-thumbnail border-0 pt-2" src=""alt="Image not Available">
-                </div>
-                <div class="product-detail my-1 px-1 position-relative">
-                    <div class="cart-section p-2" id="cart-section">
-                        <input class="small py-1 px-2" value="1" min="1" type="number" id="input">
-                        <button class="btn btn-outline-primary btn-sm" id="btn">+ Add</button>
-                    </div>
-                    <div class="font-weight-bold product-brand"></div>
-                    <small class="text-secondary product-name"></small>
-                    <div class="d-flex align-items-center justify-content-between">
-                        <div>
-                            <small class="pr-1 text-secondary">Size:</small>
-                            <span class="product-size"></span>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <small class="pr-1 text-secondary">MRP:</small>
-                            <i class="fas fa-rupee-sign fa-sm pr-1"></i>
-                            <span class="font-weight-bold product-mrp"></span>
-                        </div>
-                    </div>
-                </div>
+        <div class="row m-0">
+            <div class="d-flex justify-content-end mb-4 col-12">
+                <button class="btn btn-primary">
+                    <i class="fas fa-file-upload pr-2"></i>
+                    Upload File
+                </button>
+                <input class="d-none" type="file" accept=".csv" />
+            </div>
+            <div class="d-none col-12 overflow-auto" id="table-container">
+                <table class="table table-striped table-hover table-bordered">
+                    <thead class="thead-dark text-capitalize">
+                        <tr></tr>
+                    </thead>
+                    <tbody>
+                        <tr class="d-none"></tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -87,8 +74,9 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="javascript/list.js"></script>
+    <script type="text/javascript" src="/javascript/upload.js"></script>
     <script src=" https://static.increff.com/bootstrap/4.6.0/js/bootstrap.bundle.min.js?v=2"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
     <script type="text/javascript" src="/javascript/alert.js"></script>
 </body>
 
